Basic playable game implemented & bug fixes